# gridu-python-basic

./: README.md  fileout.txt
capstone/: README.md  pyproject.toml
capstone/config/: default.ini
capstone/entry/: main_module.py
capstone/src/: cli.py  data_generator.py  processor.py  schema.py
capstone/tests/: conftest.py  test_cli.py  test_generators.py  test_processor.py  test_schema.py
practice/concurrency/task1_fibonacci/: README.md  main.py
practice/concurrency/task2_apod_api/: .env.example  README.md  main.py
practice/parsing_serialization/: main.py
practice/parsing_serialization/tests/: result.xml
practice/python_part_1/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
practice/python_part_2/: file1.txt  file2.txt  task_clases.py  task_exceptions.py  task_input_output.py  task_read_write.py  task_read_write_2.py
practice/python_part_3/: task1.py  task2.py  task3.py  task4.py  task5.py
practice/python_part_3_tests/: test_task1.py  test_task2.py  test_task3.py  test_task4.py  test_task5.py
practice/python_testing/: conftest.py  test_read_write.py  test_read_write_2.py  test_task_classes.py  test_task_exceptions.py  test_task_input_output.py  test_task_parametrize.py
practice/web_scraping/: .env.example  README.md  requirements.txt  stock_info.py
practice/web_scraping/html_parser/: parser.py
practice/web_scraping/repository/: data_repository.py
practice/web_scraping/scraper/: request_sender.py  scraper.py
practice/web_scraping/sheet/: print_sheet.py
practice/web_scraping/tests/: mock_response.html  test_parser.py  (+2 more)
